--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="has-navbar-fixed-top">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>MetaFashion</title>
     <meta name="description"
           content="MetaFashionNFT is a collection of 10K generative 3D art pieces about to drop on the Ethereum blockchain!" />
@@ -11,7 +11,8 @@
     <script src="https://kit.fontawesome.com/4fe1002595.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css" />
 </head>
-<body class="has-navbar-fixed-top">
+<body>
+    <!--Navigation-->
     <nav class="navbar is-fixed-top is-spaced" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="#">
@@ -28,8 +29,8 @@
 
         <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="#roadmap">Roadmap</a>
-                <a class="navbar-item" href="#crew">Crew/Team</a>
+                <a class="navbar-item" href="#rewards">Roadmap</a>
+                <a class="navbar-item" href="#team">Team</a>
                 <a class="navbar-item" href="#faq">FAQ</a>
             </div>
 
@@ -52,40 +53,43 @@
             </div>
         </div>
     </nav>
-
+    <!--Hero-->
     <section class="hero">
         <video autoplay muted loop>
             <source src="assets/ny50sQ6vlFIX5VFf.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
-
+    <!--Rewards-->
+    <section class="section" id="rewards">
+        <div class="columns is-variable is-8">
+            <div class="column">
+                <h4 class="title is-4">MINTING REWARDS</h4>
+                <ul>
+                    <li>FREE MERCH TO WALLETS THAT MINT ON LAUNCH DAY</li>
+                    <li>1/1 TOKEN REWARDS UP TO $50K IN ETH</li>
+                    <li>SPECIAL ROLE IN DISCORD</li>
+                    <li>MINT & HODL AIRDROP</li>
+                </ul>
+            </div>
+            <div class="column">
+                <h4 class="title is-4">HOLDING REWARDS</h4>
+                <ul>
+                    <li>AIRDROPS</li>
+                    <li>DAO VOTING POWER</li>
+                    <li>METAVERSE ACCESS</li>
+                    <li>$METAFASHION TOKEN REWARDS</li>
+                    <li>EXCLUSIVE MERCH ACCESS</li>
+                    <li>METAFASHION HQ PRIVATE CLUB</li>
+                    <li>IRL MEET UP EVENT ACCESS</li>
+                    <li>HODLER GIVEAWAYS (ETH, NFTS, TRIPS & MORE!)</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!--Roadmap-->
     <section class="section" id="roadmap">
         <h1 class="title">Roadmap (Beta)</h1>
-
-        <div class="block">
-            MINTING REWARDS
-            <ul>
-                <li>FREE MERCH TO WALLETS THAT MINT ON LAUNCH DAY</li>
-                <li>1/1 TOKEN REWARDS UP TO $50K IN ETH</li>
-                <li>SPECIAL ROLE IN DISCORD</li>
-                <li>MINT & HODL AIRDROP</li>
-            </ul>
-        </div>
-
-        <div class="block">
-            HOLDING REWARDS
-            <ul>
-                <li>AIRDROPS</li>
-                <li>DAO VOTING POWER</li>
-                <li>METAVERSE ACCESS</li>
-                <li>$METAFASHION TOKEN REWARDS</li>
-                <li>EXCLUSIVE MERCH ACCESS</li>
-                <li>META FASHION HQ PRIVATE CLUB</li>
-                <li>IRL MEET UP EVENT ACCESS</li>
-                <li>HODLER GIVEAWAYS (ETH, NFTS, TRIPS & MORE!)</li>
-            </ul>
-        </div>
 
         <div class="block">
             <h5 class="title is-5">Phase One: READY TO LAUNCH</h5>
@@ -102,7 +106,7 @@
                 <li>ENABLE OUR DAO SYSTEM THAT WILL ALLOW HOLDERS OF THE PROJECT TO HAVE VOTING POWER ON ALL MAJOR DECISIONS COMING TO THE PROJECT VIA SNAPSHOT</li>
                 <li>CURRENT HODLERS WILL BE REWARDED WITH EXCLUSIVE AIRDROPS INCLUDING ADDITIONAL NFTS & ETH</li>
                 <li>MINTING REWARDS WILL BE DEPLOYED</li>
-                <li>OFFICIAL MERCH STORE WILL BE RELEASED TO ALL CURRENT HODLERS WITH ACCESS TO HIGH QUALITY MERCH RELATED TO THE META FASHION BRAND AS WELL AS IRL HIGH FASHION REPRODUCTIONS OF YOUR AVATARS GEAR</li>
+                <li>OFFICIAL MERCH STORE WILL BE RELEASED TO ALL CURRENT HODLERS WITH ACCESS TO HIGH QUALITY MERCH RELATED TO THE METAFASHION BRAND AS WELL AS IRL HIGH FASHION REPRODUCTIONS OF YOUR AVATARS GEAR</li>
             </ul>
         </div>
 
@@ -116,94 +120,105 @@
         </div>
 
         <div class="block">
-            <h5 class="title is-5">PHASE 4: META FASHION HQ</h5>
+            <h5 class="title is-5">PHASE 4: METAFASHION HQ</h5>
             <ul>
-                <li>THE METAVERSE ACTION BEGINS! DAO VOTING STARTS CONSTRUCTION OF META FASHION HQ IN THE METAVERSE</li>
+                <li>THE METAVERSE ACTION BEGINS! DAO VOTING STARTS CONSTRUCTION OF METAFASHION HQ IN THE METAVERSE</li>
                 <li>HODLERS WILL BEGIN TO RECEIVE $METAFASHION TOKEN FOR AMOUNT OF HODLING TIME</li>
                 <li>AIRDROP TO ALL HODLERS (TIER BASED & METAVERSE READY)</li>
-                <li>METAVERSE IS LAUNCHED AND CONSTITUTION OF META FASHION HQ CURATED IN A METAVERSE MEET UP</li>
+                <li>METAVERSE IS LAUNCHED AND CONSTITUTION OF METAFASHION HQ CURATED IN A METAVERSE MEET UP</li>
             </ul>
         </div>
 
         <div class="block">
             <h5 class="title is-5">PHASE 5: NEXT UP</h5>
             <ul>
-                <li>META FASHION’S NEXT DROP</li>
+                <li>METAFASHION’S NEXT DROP</li>
                 <li>BUILDING A FOUNDATION FOR PLAY 2 EARN</li>
             </ul>
         </div>
     </section>
-
-    <section class="section" id="crew">
-        <h1 class="title">Crew/Team</h1>
-
+    <!--Team-->
+    <section class="section team" id="team">
+        <h1 class="title">Team</h1>
         <div class="columns is-variable is-8">
             <div class="column">
-                <figure class="image is-128x-128">
-                    <img class="is-rounded neon-blue" src="assets/5.png" alt="Cameron Burns">
-                </figure>
+                <div class="card">
+                    <figure class="image is-square">
+                        <img class="is-rounded neon-blue" src="assets/5.png" alt="Cameron Burns">
+                    </figure>
 
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
-                            <p class="title is-4">Cameron Burns</p>
-                            <p class="subtitle is-6">
-                                <button class="button is-primary">
-                                        <span class="icon">
-                                            <i class="fab fa-twitter"></i>
+                    <div class="card-content has-text-centered">
+                        <div class="content">
+                            <p class="title is-5">Cameron Burns</p>
+                            <p class="subtitle is-5">Owner / Lead Artist</p>
+                        </div>
+                        <div class="media">
+                            <div class="media-content ">
+                                <p class="subtitle is-6">
+                                    <a class="twitter" href="https://twitter.com/captvart">
+                                        <span class="icon is-rounded">
+                                            <i class="fab fa-twitter fa-2xl"></i>
                                         </span>
-                                    <span>@captvart</span>
-                                </button>
-                            </p>
+                                    </a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="column">
-                <figure class="image is-128x-128">
-                    <img class="is-rounded neon-orange" src="assets/6.png" alt="Jeremy Eggert">
-                </figure>
+                <div class="card">
+                    <figure class="image is-square">
+                        <img class="is-rounded neon-orange" src="assets/6.png" alt="Jeremy Eggert">
+                    </figure>
 
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
+                    <div class="card-content has-text-centered">
+                        <div class="content">
                             <p class="title is-4">Jeremy Eggert</p>
-                            <p class="subtitle is-6">
-                                <button class="button is-primary">
-                                        <span class="icon">
-                                            <i class="fab fa-twitter"></i>
+                            <p class="subtitle is-5">Owner / Branding / Dev</p>
+                        </div>
+                        <div class="media">
+                            <div class="media-content ">
+                                <p class="subtitle is-6">
+                                    <a class="twitter" href="https://twitter.com/Jeremyalanmob">
+                                        <span class="icon is-rounded">
+                                            <i class="fab fa-twitter fa-2xl"></i>
                                         </span>
-                                    <span>@Jeremyalanmob</span>
-                                </button>
-                            </p>
+                                    </a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="column">
-                <figure class="image is-128x-128">
-                    <img class="is-rounded neon-green" src="assets/9.png" alt="Hilly">
-                </figure>
+                <div class="card">
+                    <figure class="image is-square">
+                        <img class="is-rounded neon-green" src="assets/9.png" alt="Hilly">
+                    </figure>
 
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
+                    <div class="card-content has-text-centered">
+                        <div class="content">
                             <p class="title is-4">Hilly</p>
-                            <p class="subtitle is-6">
-                                <button class="button is-primary">
-                                        <span class="icon">
-                                            <i class="fab fa-twitter"></i>
+                            <p class="subtitle is-5">Artist</p>
+                        </div>
+                        <div class="media">
+                            <div class="media-content ">
+                                <p class="subtitle is-6">
+                                    <a class="twitter" href="https://twitter.com/hillywrld">
+                                        <span class="icon is-rounded">
+                                            <i class="fab fa-twitter fa-2xl"></i>
                                         </span>
-                                    <span>@hillywrld</span>
-                                </button>
-                            </p>
+                                    </a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    <!--FAQ-->
     <section class="section" id="faq">
         <h1 class="title">FAQ</h1>
 
@@ -211,7 +226,7 @@
             Coming soon
         </div>
     </section>
-
+    <!--Footer-->
     <footer class="footer">
         <div class="content has-text-centered">
             <a href="https://twitter.com/MetaFashionNFT" class="twitter">
@@ -222,33 +237,38 @@
             </a>
             <i class="fab fa-instagram fa-2xl"></i>
         </div>
+        <div class="content has-text-centered">
+            <p>METAFASHION © 20222</p>
+        </div>
     </footer>
 
-<script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', () => {
-
-        // Get all "navbar-burger" elements
-        const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-
-        // Check if there are any navbar burgers
-        if ($navbarBurgers.length > 0) {
-
-            // Add a click event on each of them
-            $navbarBurgers.forEach( el => {
-                el.addEventListener('click', () => {
-
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', () => {
+            // Check if there are any navbar burgers
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+            if ($navbarBurgers.length > 0) {
+                // Add a click event on each of them
+                $navbarBurgers.forEach( el => {
                     // Get the target from the "data-target" attribute
                     const target = el.dataset.target;
                     const $target = document.getElementById(target);
 
-                    // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-                    el.classList.toggle('is-active');
-                    $target.classList.toggle('is-active');
+                    el.addEventListener('click', () => {
+                        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                        el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+                    });
 
+                    // Close menu when item clicked
+                    $target.querySelectorAll('.navbar-item').forEach( ni => {
+                        ni.addEventListener('click', () => {
+                            el.classList.toggle('is-active');
+                            $target.classList.toggle('is-active');
+                        });
+                    });
                 });
-            });
-        }
-    });
-</script>
+            }
+        });
+    </script>
 </body>
 </html>
