--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="has-navbar-fixed-top">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar is-fixed-top is-spaced" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="#">
                 <img src="assets/logo.svg"
@@ -29,12 +29,14 @@
 
         <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="#rewards">Roadmap</a>
-                <a class="navbar-item" href="#team">Team</a>
-                <a class="navbar-item" href="#faq">FAQ</a>
+
             </div>
 
             <div class="navbar-end">
+                <a class="navbar-item" href="#rewards">Roadmap</a>
+                <a class="navbar-item" href="#team">Team</a>
+                <a class="navbar-item" href="#faq">FAQ</a>
+                <a class="navbar-item" href="#">|</a>
                 <div class="navbar-item">
                     <a href="https://twitter.com/MetaFashionNFT" class="twitter">
                                 <span class="icon is-large">
