Added timeline sample and team instagram links.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" type="image/svg+xml" href="assets/logo-mf.svg">
     <script src="https://kit.fontawesome.com/4fe1002595.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/bulma-timeline.min.css" />
     <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
@@ -93,51 +94,190 @@
     <section class="section" id="roadmap">
         <h1 class="title">Roadmap (Beta)</h1>
 
-        <div class="block">
-            <h5 class="title is-5">Phase One: READY TO LAUNCH</h5>
-            <ul>
-                <li>LAUNCH DISCORD AND WEBSITE</li>
-                <li>REWARD THE GROWING COMMUNITY WITH GIVEAWAYS INCLUDING ETH, NFTS AND SPECIAL ROLES WITHIN THE COMMUNITY WITH WHITELISTING BENEFITS</li>
-                <li>LAUNCH THE COLLECTION OF 10K METAFASHION AVATARS INTO THE METAVERSE</li>
-            </ul>
+
+        <div class="timeline is-centered">
+            <!--Phase 1-->
+            <header class="timeline-header">
+                <span class="tag is-medium">Phase 1</span>
+            </header>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Ready to Launch</p>
+                    <p>LAUNCH DISCORD AND WEBSITE</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Rewards</p>
+                    <p>REWARD THE GROWING COMMUNITY WITH GIVEAWAYS INCLUDING ETH, NFTS AND SPECIAL ROLES WITHIN THE COMMUNITY WITH WHITELISTING BENEFITS</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Launch</p>
+                    <p>LAUNCH THE COLLECTION OF 10K METAFASHION AVATARS INTO THE METAVERSE</p>
+                </div>
+            </div>
+            <!--Phase 2-->
+            <header class="timeline-header">
+                <span class="tag is-medium">Phase 2</span>
+            </header>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Foundation</p>
+                    <p>ENABLE OUR DAO SYSTEM THAT WILL ALLOW HOLDERS OF THE PROJECT TO HAVE VOTING POWER ON ALL MAJOR DECISIONS COMING TO THE PROJECT VIA SNAPSHOT</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Rewards</p>
+                    <p>CURRENT HODLERS WILL BE REWARDED WITH EXCLUSIVE AIRDROPS INCLUDING ADDITIONAL NFTS & ETH</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Rewards</p>
+                    <p>MINTING REWARDS WILL BE DEPLOYED</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Merchandise</p>
+                    <p>OFFICIAL MERCH STORE WILL BE RELEASED TO ALL CURRENT HODLERS WITH ACCESS TO HIGH QUALITY MERCH RELATED TO THE METAFASHION BRAND AS WELL AS IRL HIGH FASHION REPRODUCTIONS OF YOUR AVATARS GEAR</p>
+                </div>
+            </div>
+            <!--Phase 3-->
+            <header class="timeline-header">
+                <span class="tag is-medium">Phase 3</span>
+            </header>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Giving Back</p>
+                    <p>ACTIVATE AND FUND THE COMMUNITY AND CHARITY WALLET. (DAO SYSTEM WILL BE USED TO DECIDE UPON WHICH CHARITIES WILL BE CONSIDERED)</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Meet Up</p>
+                    <p>FIRST IRL MEET UP</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Merchandise</p>
+                    <p>MERCH STORE IS RELEASED TO THE PUBLIC (LIMITED QUANTITY)</p>
+                </div>
+            </div>
+            <!--Phase 4-->
+            <header class="timeline-header">
+                <span class="tag is-medium">Phase 4</span>
+            </header>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">MetaFashion HQ</p>
+                    <p>THE METAVERSE ACTION BEGINS! DAO VOTING STARTS CONSTRUCTION OF METAFASHION HQ IN THE METAVERSE</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Tokenomics</p>
+                    <p>HODLERS WILL BEGIN TO RECEIVE $METAFASHION TOKEN FOR AMOUNT OF HODLING TIME</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Airdrop</p>
+                    <p>AIRDROP TO ALL HODLERS (TIER BASED & METAVERSE READY)</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Metaverse</p>
+                    <p>METAVERSE IS LAUNCHED AND CONSTITUTION OF METAFASHION HQ CURATED IN A METAVERSE MEET UP</p>
+                </div>
+            </div>
+            <!--Phase 5-->
+            <header class="timeline-header">
+                <span class="tag is-medium">Phase 5</span>
+            </header>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Next Up</p>
+                    <p>METAFASHION’S NEXT DROP</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                    <p class="heading">Play 2 Earn</p>
+                    <p>BUILDING A FOUNDATION FOR PLAY 2 EARN</p>
+                </div>
+            </div>
+            <div class="timeline-header">
+                <span class="tag is-medium">Moon</span>
+            </div>
         </div>
 
-        <div class="block">
-            <h5 class="title is-5">Phase Two: FOUNDATION</h5>
-            <ul>
-                <li>ENABLE OUR DAO SYSTEM THAT WILL ALLOW HOLDERS OF THE PROJECT TO HAVE VOTING POWER ON ALL MAJOR DECISIONS COMING TO THE PROJECT VIA SNAPSHOT</li>
-                <li>CURRENT HODLERS WILL BE REWARDED WITH EXCLUSIVE AIRDROPS INCLUDING ADDITIONAL NFTS & ETH</li>
-                <li>MINTING REWARDS WILL BE DEPLOYED</li>
-                <li>OFFICIAL MERCH STORE WILL BE RELEASED TO ALL CURRENT HODLERS WITH ACCESS TO HIGH QUALITY MERCH RELATED TO THE METAFASHION BRAND AS WELL AS IRL HIGH FASHION REPRODUCTIONS OF YOUR AVATARS GEAR</li>
-            </ul>
-        </div>
+<!--        <div class="block">-->
+<!--            <h5 class="title is-5">Phase One: READY TO LAUNCH</h5>-->
+<!--            <ul>-->
+<!--                <li>LAUNCH DISCORD AND WEBSITE</li>-->
+<!--                <li>REWARD THE GROWING COMMUNITY WITH GIVEAWAYS INCLUDING ETH, NFTS AND SPECIAL ROLES WITHIN THE COMMUNITY WITH WHITELISTING BENEFITS</li>-->
+<!--                <li>LAUNCH THE COLLECTION OF 10K METAFASHION AVATARS INTO THE METAVERSE</li>-->
+<!--            </ul>-->
+<!--        </div>-->
 
-        <div class="block">
-            <h5 class="title is-5">Phase 3: GIVING BACK</h5>
-            <ul>
-                <li>ACTIVATE AND FUND THE COMMUNITY AND CHARITY WALLET. (DAO SYSTEM WILL BE USED TO DECIDE UPON WHICH CHARITIES WILL BE CONSIDERED)</li>
-                <li>FIRST IRL MEET UP</li>
-                <li>MERCH STORE IS RELEASED TO THE PUBLIC (LIMITED QUANTITY)</li>
-            </ul>
-        </div>
+<!--        <div class="block">-->
+<!--            <h5 class="title is-5">Phase Two: FOUNDATION</h5>-->
+<!--            <ul>-->
+<!--                <li>ENABLE OUR DAO SYSTEM THAT WILL ALLOW HOLDERS OF THE PROJECT TO HAVE VOTING POWER ON ALL MAJOR DECISIONS COMING TO THE PROJECT VIA SNAPSHOT</li>-->
+<!--                <li>CURRENT HODLERS WILL BE REWARDED WITH EXCLUSIVE AIRDROPS INCLUDING ADDITIONAL NFTS & ETH</li>-->
+<!--                <li>MINTING REWARDS WILL BE DEPLOYED</li>-->
+<!--                <li>OFFICIAL MERCH STORE WILL BE RELEASED TO ALL CURRENT HODLERS WITH ACCESS TO HIGH QUALITY MERCH RELATED TO THE METAFASHION BRAND AS WELL AS IRL HIGH FASHION REPRODUCTIONS OF YOUR AVATARS GEAR</li>-->
+<!--            </ul>-->
+<!--        </div>-->
 
-        <div class="block">
-            <h5 class="title is-5">PHASE 4: METAFASHION HQ</h5>
-            <ul>
-                <li>THE METAVERSE ACTION BEGINS! DAO VOTING STARTS CONSTRUCTION OF METAFASHION HQ IN THE METAVERSE</li>
-                <li>HODLERS WILL BEGIN TO RECEIVE $METAFASHION TOKEN FOR AMOUNT OF HODLING TIME</li>
-                <li>AIRDROP TO ALL HODLERS (TIER BASED & METAVERSE READY)</li>
-                <li>METAVERSE IS LAUNCHED AND CONSTITUTION OF METAFASHION HQ CURATED IN A METAVERSE MEET UP</li>
-            </ul>
-        </div>
+<!--        <div class="block">-->
+<!--            <h5 class="title is-5">Phase 3: GIVING BACK</h5>-->
+<!--            <ul>-->
+<!--                <li>ACTIVATE AND FUND THE COMMUNITY AND CHARITY WALLET. (DAO SYSTEM WILL BE USED TO DECIDE UPON WHICH CHARITIES WILL BE CONSIDERED)</li>-->
+<!--                <li>FIRST IRL MEET UP</li>-->
+<!--                <li>MERCH STORE IS RELEASED TO THE PUBLIC (LIMITED QUANTITY)</li>-->
+<!--            </ul>-->
+<!--        </div>-->
 
-        <div class="block">
-            <h5 class="title is-5">PHASE 5: NEXT UP</h5>
-            <ul>
-                <li>METAFASHION’S NEXT DROP</li>
-                <li>BUILDING A FOUNDATION FOR PLAY 2 EARN</li>
-            </ul>
-        </div>
+<!--        <div class="block">-->
+<!--            <h5 class="title is-5">PHASE 4: METAFASHION HQ</h5>-->
+<!--            <ul>-->
+<!--                <li>THE METAVERSE ACTION BEGINS! DAO VOTING STARTS CONSTRUCTION OF METAFASHION HQ IN THE METAVERSE</li>-->
+<!--                <li>HODLERS WILL BEGIN TO RECEIVE $METAFASHION TOKEN FOR AMOUNT OF HODLING TIME</li>-->
+<!--                <li>AIRDROP TO ALL HODLERS (TIER BASED & METAVERSE READY)</li>-->
+<!--                <li>METAVERSE IS LAUNCHED AND CONSTITUTION OF METAFASHION HQ CURATED IN A METAVERSE MEET UP</li>-->
+<!--            </ul>-->
+<!--        </div>-->
+
+<!--        <div class="block">-->
+<!--            <h5 class="title is-5">PHASE 5: NEXT UP</h5>-->
+<!--            <ul>-->
+<!--                <li>METAFASHION’S NEXT DROP</li>-->
+<!--                <li>BUILDING A FOUNDATION FOR PLAY 2 EARN</li>-->
+<!--            </ul>-->
+<!--        </div>-->
     </section>
     <!--Team-->
     <section class="section team" id="team">
@@ -157,11 +297,20 @@
                         <div class="media">
                             <div class="media-content ">
                                 <p class="subtitle is-6">
-                                    <a class="twitter" href="https://twitter.com/captvart">
-                                        <span class="icon is-rounded">
-                                            <i class="fab fa-twitter fa-2xl"></i>
-                                        </span>
-                                    </a>
+                                    <span class="icon is-medium">
+                                        <a class="twitter" href="https://twitter.com/captvart">
+                                            <span class="icon is-rounded">
+                                                <i class="fab fa-twitter fa-2xl"></i>
+                                            </span>
+                                        </a>
+                                    </span>
+                                    <span class="icon is-medium">
+                                        <a class="instagram" href="https://instagram.com/captvart">
+                                            <span class="icon is-rounded">
+                                                <i class="fab fa-instagram fa-2xl"></i>
+                                            </span>
+                                        </a>
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -182,11 +331,20 @@
                         <div class="media">
                             <div class="media-content ">
                                 <p class="subtitle is-6">
-                                    <a class="twitter" href="https://twitter.com/Jeremyalanmob">
-                                        <span class="icon is-rounded">
-                                            <i class="fab fa-twitter fa-2xl"></i>
-                                        </span>
-                                    </a>
+                                    <span class="icon is-medium">
+                                        <a class="twitter" href="https://twitter.com/Jeremyalanmob">
+                                            <span class="icon is-rounded">
+                                                <i class="fab fa-twitter fa-2xl"></i>
+                                            </span>
+                                        </a>
+                                    </span>
+                                    <span class="icon is-medium">
+                                        <a class="instagram" href="https://instagram.com/jeremy.eggert">
+                                            <span class="icon is-rounded">
+                                                <i class="fab fa-instagram fa-2xl"></i>
+                                            </span>
+                                        </a>
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -207,15 +365,23 @@
                         <div class="media">
                             <div class="media-content ">
                                 <p class="subtitle is-6">
-                                    <a class="twitter" href="https://twitter.com/hillywrld">
-                                        <span class="icon is-rounded">
-                                            <i class="fab fa-twitter fa-2xl"></i>
-                                        </span>
-                                    </a>
+                                    <span class="icon is-medium">
+                                        <a class="twitter" href="https://twitter.com/hillywrld">
+                                            <span class="icon is-rounded">
+                                                <i class="fab fa-twitter fa-2xl"></i>
+                                            </span>
+                                        </a>
+                                    </span>
+                                    <span class="icon is-medium">
+                                        <a class="instagram" href="https://instagram.com/hillywrld">
+                                            <span class="icon is-rounded">
+                                                <i class="fab fa-instagram fa-2xl"></i>
+                                            </span>
+                                        </a>
+                                    </span>
                                 </p>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -231,6 +397,10 @@
     <!--Footer-->
     <footer class="footer">
         <div class="content has-text-centered">
+            <img src="assets/logo.svg"
+                 alt="MetaFashionNFT is a collection of 10K generative 3D art pieces about to drop on the Ethereum blockchain!">
+        </div>
+        <div class="content has-text-centered">
             <a href="https://twitter.com/MetaFashionNFT" class="twitter">
                 <i class="fab fa-twitter fa-2xl"></i>
             </a>
@@ -240,7 +410,7 @@
             <i class="fab fa-instagram fa-2xl"></i>
         </div>
         <div class="content has-text-centered">
-            <p>METAFASHION © 20222</p>
+            <p>© 20222 METAFASHION</p>
         </div>
     </footer>
 
