--- a/index.html
+++ b/index.html
@@ -29,29 +29,25 @@
         </div>
 
         <div id="navMenu" class="navbar-menu">
-            <div class="navbar-start">
-
-            </div>
-
             <div class="navbar-end">
                 <a class="navbar-item" href="#rewards">Roadmap</a>
                 <a class="navbar-item" href="#team">Team</a>
                 <a class="navbar-item" href="#faq">FAQ</a>
-                <a class="navbar-item" href="#">|</a>
+                <div class="navbar-item is-spacer">|</div>
                 <div class="navbar-item">
                     <a href="https://twitter.com/MetaFashionNFT" class="twitter">
-                                <span class="icon is-large">
-                                    <i class="fab fa-twitter fa-lg"></i>
-                                </span>
+                        <span class="icon is-large">
+                            <i class="fab fa-twitter fa-lg"></i>
+                        </span>
                     </a>
                     <a href="https://discord.com" class="discord">
-                                <span class="icon is-large">
-                                    <i class="fab fa-discord fa-lg"></i>
-                                </span>
+                        <span class="icon is-large">
+                            <i class="fab fa-discord fa-lg"></i>
+                        </span>
                     </a>
                     <span class="icon is-large">
-                                <i class="fab fa-instagram fa-lg"></i>
-                            </span>
+                        <i class="fab fa-instagram fa-lg"></i>
+                    </span>
                 </div>
             </div>
         </div>
@@ -114,7 +110,7 @@
                     <p>REWARD THE GROWING COMMUNITY WITH GIVEAWAYS INCLUDING ETH, NFTS AND SPECIAL ROLES WITHIN THE COMMUNITY WITH WHITELISTING BENEFITS</p>
                 </div>
             </div>
-            <div class="timeline-item">
+            <div class="timeline-item is-last">
                 <div class="timeline-marker"></div>
                 <div class="timeline-content">
                     <p class="heading">Launch</p>
@@ -146,7 +142,7 @@
                     <p>MINTING REWARDS WILL BE DEPLOYED</p>
                 </div>
             </div>
-            <div class="timeline-item">
+            <div class="timeline-item is-last">
                 <div class="timeline-marker"></div>
                 <div class="timeline-content">
                     <p class="heading">Merchandise</p>
@@ -171,7 +167,7 @@
                     <p>FIRST IRL MEET UP</p>
                 </div>
             </div>
-            <div class="timeline-item">
+            <div class="timeline-item is-last">
                 <div class="timeline-marker"></div>
                 <div class="timeline-content">
                     <p class="heading">Merchandise</p>
@@ -203,7 +199,7 @@
                     <p>AIRDROP TO ALL HODLERS (TIER BASED & METAVERSE READY)</p>
                 </div>
             </div>
-            <div class="timeline-item">
+            <div class="timeline-item is-last">
                 <div class="timeline-marker"></div>
                 <div class="timeline-content">
                     <p class="heading">Metaverse</p>
@@ -221,7 +217,7 @@
                     <p>METAFASHION’S NEXT DROP</p>
                 </div>
             </div>
-            <div class="timeline-item">
+            <div class="timeline-item is-last">
                 <div class="timeline-marker"></div>
                 <div class="timeline-content">
                     <p class="heading">Play 2 Earn</p>
@@ -410,7 +406,8 @@
             <i class="fab fa-instagram fa-2xl"></i>
         </div>
         <div class="content has-text-centered">
-            <p>© 20222 METAFASHION</p>
+            <p>© 2022 METAFASHION</p>
+            <p>All Rights Reserved</p>
         </div>
     </footer>
 
