Added glow effects, along with full size hero.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <div class="container has-text-centered">
                 <img src="assets/vial.webp" />
                 <div id="loading" class="container has-text-centered">
-                    <progress class="progress" max="100"></progress>
+                    <div id="status" class="block">Initializing...</div>
+                    <progress class="progress glow" max="100"></progress>
                 </div>
             </div>
         </div>
@@ -64,11 +65,15 @@
             </div>
         </nav>
         <!--Hero-->
-        <section class="hero">
-            <video autoplay muted loop>
-                <source src="assets/ny50sQ6vlFIX5VFf.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        <section class="hero is-fullheight">
+            <div class="hero-body">
+                <video autoplay muted loop>
+                    <source src="assets/ny50sQ6vlFIX5VFf.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+
+
         </section>
         <!--Rewards-->
         <section class="section" id="rewards">
@@ -105,24 +110,24 @@
             <div class="timeline is-centered">
                 <!--Phase 1-->
                 <header class="timeline-header">
-                    <span class="tag is-medium">Phase 1</span>
+                    <span class="tag is-medium glow">Phase 1</span>
                 </header>
                 <div class="timeline-item">
-                    <div class="timeline-marker is-24x24 is-image"></div>
+                    <div class="timeline-marker is-24x24 is-image glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Ready to Launch</p>
                         <p>LAUNCH DISCORD AND WEBSITE</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Rewards</p>
                         <p>REWARD THE GROWING COMMUNITY WITH GIVEAWAYS INCLUDING ETH, NFTS AND SPECIAL ROLES WITHIN THE COMMUNITY WITH WHITELISTING BENEFITS</p>
                     </div>
                 </div>
                 <div class="timeline-item is-last">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Launch</p>
                         <p>LAUNCH THE COLLECTION OF 10K METAFASHION AVATARS INTO THE METAVERSE</p>
@@ -130,31 +135,31 @@
                 </div>
                 <!--Phase 2-->
                 <header class="timeline-header">
-                    <span class="tag is-medium">Phase 2</span>
+                    <span class="tag is-medium glow">Phase 2</span>
                 </header>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Foundation</p>
                         <p>ENABLE OUR DAO SYSTEM THAT WILL ALLOW HOLDERS OF THE PROJECT TO HAVE VOTING POWER ON ALL MAJOR DECISIONS COMING TO THE PROJECT VIA SNAPSHOT</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Rewards</p>
                         <p>CURRENT HODLERS WILL BE REWARDED WITH EXCLUSIVE AIRDROPS INCLUDING ADDITIONAL NFTS & ETH</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Rewards</p>
                         <p>MINTING REWARDS WILL BE DEPLOYED</p>
                     </div>
                 </div>
                 <div class="timeline-item is-last">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Merchandise</p>
                         <p>OFFICIAL MERCH STORE WILL BE RELEASED TO ALL CURRENT HODLERS WITH ACCESS TO HIGH QUALITY MERCH RELATED TO THE METAFASHION BRAND AS WELL AS IRL HIGH FASHION REPRODUCTIONS OF YOUR AVATARS GEAR</p>
@@ -162,24 +167,24 @@
                 </div>
                 <!--Phase 3-->
                 <header class="timeline-header">
-                    <span class="tag is-medium">Phase 3</span>
+                    <span class="tag is-medium glow">Phase 3</span>
                 </header>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Giving Back</p>
                         <p>ACTIVATE AND FUND THE COMMUNITY AND CHARITY WALLET. (DAO SYSTEM WILL BE USED TO DECIDE UPON WHICH CHARITIES WILL BE CONSIDERED)</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Meet Up</p>
                         <p>FIRST IRL MEET UP</p>
                     </div>
                 </div>
                 <div class="timeline-item is-last">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Merchandise</p>
                         <p>MERCH STORE IS RELEASED TO THE PUBLIC (LIMITED QUANTITY)</p>
@@ -187,31 +192,31 @@
                 </div>
                 <!--Phase 4-->
                 <header class="timeline-header">
-                    <span class="tag is-medium">Phase 4</span>
+                    <span class="tag is-medium glow">Phase 4</span>
                 </header>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">MetaFashion HQ</p>
                         <p>THE METAVERSE ACTION BEGINS! DAO VOTING STARTS CONSTRUCTION OF METAFASHION HQ IN THE METAVERSE</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Tokenomics</p>
                         <p>HODLERS WILL BEGIN TO RECEIVE $METAFASHION TOKEN FOR AMOUNT OF HODLING TIME</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Airdrop</p>
                         <p>AIRDROP TO ALL HODLERS (TIER BASED & METAVERSE READY)</p>
                     </div>
                 </div>
                 <div class="timeline-item is-last">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Metaverse</p>
                         <p>METAVERSE IS LAUNCHED AND CONSTITUTION OF METAFASHION HQ CURATED IN A METAVERSE MEET UP</p>
@@ -219,7 +224,7 @@
                 </div>
                 <!--Phase 5-->
                 <header class="timeline-header">
-                    <span class="tag is-medium">Phase 5</span>
+                    <span class="tag is-medium glow">Phase 5</span>
                 </header>
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
@@ -229,14 +234,14 @@
                     </div>
                 </div>
                 <div class="timeline-item is-last">
-                    <div class="timeline-marker"></div>
+                    <div class="timeline-marker glow"></div>
                     <div class="timeline-content">
                         <p class="heading">Play 2 Earn</p>
                         <p>BUILDING A FOUNDATION FOR PLAY 2 EARN</p>
                     </div>
                 </div>
                 <div class="timeline-header">
-                    <span class="tag is-medium">Moon</span>
+                    <span class="tag is-medium glow">Moon</span>
                 </div>
             </div>
 
