--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="landing" class="hero is-fullheight">
         <div class="hero-body">
             <div class="container has-text-centered">
-                <img src="assets/vial.webp" />
+                <img src="assets/vial.webp" alt="MetaFashion" />
                 <div id="loading" class="container has-text-centered">
                     <div id="status" class="block">Initializing...</div>
                     <progress class="progress glow" max="100"></progress>
@@ -298,7 +298,7 @@
                 <div class="column">
                     <div class="card">
                         <figure class="image is-square">
-                            <img class="is-rounded neon-blue" src="assets/5.png" alt="Cameron Burns">
+                            <img class="is-rounded neon-blue glow-blue" src="assets/5.png" alt="Cameron Burns">
                         </figure>
 
                         <div class="card-content has-text-centered">
@@ -332,7 +332,7 @@
                 <div class="column">
                     <div class="card">
                         <figure class="image is-square">
-                            <img class="is-rounded neon-orange" src="assets/6.png" alt="Jeremy Eggert">
+                            <img class="is-rounded neon-orange glow-orange" src="assets/6.png" alt="Jeremy Eggert">
                         </figure>
 
                         <div class="card-content has-text-centered">
@@ -366,7 +366,7 @@
                 <div class="column">
                     <div class="card">
                         <figure class="image is-square">
-                            <img class="is-rounded neon-green" src="assets/9.png" alt="Hilly">
+                            <img class="is-rounded neon-green glow-green" src="assets/9.png" alt="Hilly">
                         </figure>
 
                         <div class="card-content has-text-centered">
